@@ -28,4 +28,5 @@ install:
 script:
   - pylint --disable=W0511,R0205 msgcheck
   - pylint --disable=W0511,R0205 tests
-  - nosetests
+  - pip install pytest
+  - pytest
