@@ -7,6 +7,7 @@
 == Version 3.1 (under dev)
 
 * fix parsing of "noqa" tag in comments (issue #11)
+* use pytest for unit tests
 
 == Version 3.0 (2018-12-14)
 
